--- a/dm/content/tuple.tex
+++ b/dm/content/tuple.tex
@@ -1,4 +1,4 @@
-\subsection{Tupel}
+\section{Tupel}
 Ein \(n\)-Tupel ist ein \emph{geordneter} Vektor
 \[
   (a_1,\dots,a_n).
@@ -11,7 +11,7 @@ Zwei Tupel sind genau dann gleich, wenn sie dieselbe Länge haben und alle entsp
   n=k\ \land\ a_1=b_1\ \land \dots \land a_n=b_k
 \end{multline*}
 
-\subsubsection{Kartesisches Produkt}
+\subsection{Kartesisches Produkt}
 Das kartesische Produkt \(A_1\times\cdots\times A_n\) ist die Menge aller \(n\)-Tupel, deren Einträge aus den Mengen \(A_1,\dots,A_n\) stammen.
 \[
   A_1\times\cdots\times A_n:=\{(a_1,\dots,a_n)\mid a_i\in A_i\ \text{für }1\le i\le n\}.
@@ -29,7 +29,7 @@ Das kartesische Produkt \(A_1\times\cdots\times A_n\) ist die Menge aller \(n\)-
   \mathbb{N}^2 &= \{(x, y) \mid x \in \mathbb{N} \land y \in \mathbb{N}\}
 \end{align*}
 
-\subsubsection{Projektionen}
+\subsection{Projektionen}
 Für eine Menge \(A\) von \(n\)-Tupeln und ist \(k \le n\) eine natürliche Zahl, definiert man die \(k\)-te Projektion:
 \[
   \operatorname{pr}_k(A) := \{ x[k] \mid x \in A \}.
