--- a/an1/cheatsheet.tex
+++ b/an1/cheatsheet.tex
@@ -33,8 +33,7 @@
 \rule{0.3\linewidth}{0.25pt}
 \scriptsize
 
-Copyright \copyright\ 2025 Justin Iven Müller
-
+By Justin Iven Müller (2025)
 \href{https://github.com/JustinIven/zhaw-cheatsheets}{github.com/JustinIven/zhaw-cheatsheets}
 
 
