--- a/an1/content/basics.tex
+++ b/an1/content/basics.tex
@@ -73,7 +73,7 @@ Für endliche Summen gelten folgende Regeln:
     \sum_{i=1}^{n} (c \cdot a_i) &= c \cdot \sum_{i=1}^{n} a_i
 \end{align*}
 
-\section{Betragsfunktion}
+\subsection{Betragsfunktion}
 Der Betrag einer reellen Zahl \(x\) ist definiert als:
 \[|x| = 
 \begin{cases}
