--- a/an1/content/def.tex
+++ b/an1/content/def.tex
@@ -7,7 +7,7 @@
 \renewcommand{\section}{\@startsection{section}{1}{0mm}%
                                 {-1ex plus -.5ex minus -.2ex}%
                                 {0.5ex plus .2ex}%x
-                                {\normalfont\large\bfseries}}
+                                {\color{blue}\normalfont\large\bfseries}}
 \renewcommand{\subsection}{\@startsection{subsection}{2}{0mm}%
                                 {-1explus -.5ex minus -.2ex}%
                                 {0.5ex plus .2ex}%
@@ -20,6 +20,7 @@
 
 % Remove indentation in itemize/enumerate and set left margin to zero
 \setlist[itemize]{leftmargin=*}
+\setlist[enumerate]{leftmargin=*}
 
 % Don't print section numbers
 \setcounter{secnumdepth}{0}
