--- a/an1/content/derivatives.tex
+++ b/an1/content/derivatives.tex
@@ -1,9 +1,52 @@
 \section{Differentialrechnung}
 Sei \(f(x) : D \to \mathbb{R}\) eine Funktion. Die Ableitung \(f'(x_0)\) beschreibt die Änderungsrate der Funktion an der Stelle \(x_0\). Sie wird definiert als der Grenzwert des Differenzenquotienten:
 \[
-    f'(x_0) = \lim_{\Delta x \to 0} \frac{f(x_0 + \Delta x) - f(x_0)}{\Delta x}
+    f'(x_0) = \lim_{\Delta x \to 0} \frac{f(x_0 + \Delta x) - f(x_0)}{\Delta x} = \lim_{x \to 0} \frac{\Delta f}{\Delta x}(x_0) 
 \]
+\begin{center}
+\begin{tikzpicture}[font=\tiny]
+    \pgfplotsset{ticks=none}
+    \begin{axis}
+        [axis lines = middle,
+        xlabel = \(x\),
+        ylabel = \(y\),
+        samples=100,
+        ymin=-0.1, ymax=0.8,
+        xmin=-0.2, xmax=1.2,
+        width=8cm,
+        height=5cm
+        ]
+        \node[above] at (axis cs:1.05,0.15) {\(f(x)\)};
+        \addplot[domain=0:1.2, thick] { -4*x^4+2*x^3+2*x^2 };
 
+        \draw[dashed, thin] (axis cs:0.9,0) node[below, orange] {$x_1$} -- (axis cs:0.9, { -4*0.9^4+2*0.9^3+2*0.9^2 });
+        \draw[dashed, thin] (axis cs:0,{ -4*0.9^4+2*0.9^3+2*0.9^2 }) node[left, orange] {$f(x_1)$} -- (axis cs:0.9, { -4*0.9^4+2*0.9^3+2*0.9^2 });
+        \addplot[domain=0:1.2, thin, orange] {0.520*x -0.014};
+        \fill[draw=black, fill=orange] (axis cs:0.9, { -4*0.9^4+2*0.9^3+2*0.9^2 }) circle(1.5pt);
+        
+        \draw[dashed, thin] (axis cs:0.70,0) node[below, magenta] {$x_2$} -- (axis cs:0.70, { -4*0.70^4+2*0.70^3+2*0.70^2 });
+        \draw[dashed] (axis cs:0,{ -4*0.70^4+2*0.70^3+2*0.70^2 }) node[left, magenta] {$f(x_2)$} -- (axis cs:0.70, { -4*0.70^4+2*0.70^3+2*0.70^2 });
+        \addplot[domain=0:1.2, thin, magenta] {1.232*x -0.157};
+        \fill[draw=black, fill=magenta] (axis cs:0.70, { -4*0.70^4+2*0.70^3+2*0.70^2 }) circle(1.5pt);
+        
+        \draw[dashed, thin] (axis cs:0.3,0) node[below, blue] {$x_3$} -- (axis cs:0.3, { -4*0.3^4+2*0.3^3+2*0.3^2 });
+        \draw[dashed] (axis cs:0,{ -4*0.3^4+2*0.3^3+2*0.3^2 }) node[left, blue] {$f(x_3)$} -- (axis cs:0.3, { -4*0.3^4+2*0.3^3+2*0.3^2 });
+        \addplot[domain=0:1.2, thin, blue] {1.120*x -0.134};
+        \fill[draw=black, fill=blue] (axis cs:0.3, { -4*0.3^4+2*0.3^3+2*0.3^2 }) circle(1.5pt);
+        
+        \draw[dashed, thin] (axis cs:0.2,0) node[below] {$x_0$} -- (axis cs:0.2, { -4*0.2^4+2*0.2^3+2*0.2^2 });
+        \draw[dashed, thin] (axis cs:0,{ -4*0.2^4+2*0.2^3+2*0.2^2 }) node[left] {$f(x_0)$} -- (axis cs:0.2, { -4*0.2^4+2*0.2^3+2*0.2^2 });
+        \addplot[domain=0:1.2, thick, red] {0.912*x -0.093};
+        \fill[black] (axis cs:0.2,{ -4*0.2^4+2*0.2^3+2*0.2^2 }) circle(1.5pt);
+        
+        \node[red] at (axis cs:1.02,0.7) {Tangente};
+        \node[orange] at (axis cs:1,0.6) {Sekante 1};
+        \node[magenta] at (axis cs:0.6,0.78) {Sekante 2};
+        \node[blue] at (axis cs:0.95,0.78) {Sekante 3};
+    \end{axis}
+\end{tikzpicture}
+\end{center}
+    
 \subsection{Ableitungsregeln}
 \begin{itemize}
     \item \textbf{Faktorregel:} \((c \cdot f)'(x) = c \cdot f'(x)\)
