--- a/an1/content/limits.tex
+++ b/an1/content/limits.tex
@@ -48,6 +48,7 @@ Sei \(p(n)\) und \(q(n)\) zwei Polynome vom Grad \(g_p\) bzw. \(g_q\) mit führe
 \begin{align*}
     \lim_{n \to \infty} \left(1 + \frac{1}{n}\right)^n &= e\\
     \lim_{n \to \infty} \sqrt[n]{a} &= 1, \quad a > 0\\
+    \lim_{n \to \infty} \sqrt[n]{n} &= 1\\
     \lim_{n \to \infty} q^n &= \begin{cases}
     0, & |q| < 1\\
     1, & q = 1\\
