--- a/dm/cheatsheet.tex
+++ b/dm/cheatsheet.tex
@@ -34,6 +34,9 @@
 \input{content/infiniteSets.tex}
 \input{content/countableSets.tex}
 \input{content/uncountableSets.tex}
+\input{content/peanoAxioms.tex}
+\input{content/induction.tex}
+\input{content/structuralInductionAndRecursion.tex}
 
 \vfill
 
