--- a/dm/content/posets.tex
+++ b/dm/content/posets.tex
@@ -1,9 +1,9 @@
 \section{Halbordnungen}
-Eine \emph{Halbordnung} (poset) ist eine homogene Relation $\preceq$ auf einer Menge $A$, die
+Eine Relation $\preceq$ auf einer Menge $A$ heisst \emph{Halbordnung}, falls sie für alle $x,y,z\in A$ die folgenden Eigenschaften erfüllt:
 \begin{itemize}
-  \item \emph{reflexiv}: $\forall a\in A:\; a\preceq a$,
-  \item \emph{transitiv}: $\forall a,b,c\in A:\; (a\preceq b \wedge b\preceq c)\Rightarrow a\preceq c$,
-  \item \emph{antisymmetrisch}: $\forall a,b\in A:\; (a\preceq b \wedge b\preceq a)\Rightarrow a=b$.
+  \item \textbf{reflexiv:} \quad $x \preceq x$,
+  \item \textbf{transitiv:} \quad $x \preceq y \land y \preceq z \Rightarrow x \preceq z$,
+  \item \textbf{antisymmetrisch:} \quad $x \preceq y \land y \preceq x \Rightarrow x=y$.
 \end{itemize}
 
 \subsection{Typische Beispiele}
