--- a/dm/cheatsheet.tex
+++ b/dm/cheatsheet.tex
@@ -12,6 +12,7 @@
 \usepgfplotslibrary{fillbetween}
 \usepackage[ngerman]{babel}
 \usepackage{faktor}
+\usepackage{stmaryrd}
 
 
 \begin{document}
@@ -37,6 +38,7 @@
 \input{content/peanoAxioms.tex}
 \input{content/induction.tex}
 \input{content/structuralInductionAndRecursion.tex}
+\input{content/structuralInductionAndRecursionPropositionsExamples.tex}
 
 \vfill
 
