--- a/dm/content/sets.tex
+++ b/dm/content/sets.tex
@@ -62,14 +62,14 @@ Für jedes \(i \in I\) sei \(A_i\) eine Menge.
 \subsubsection{Allgemeine Vereinigung}
 \(x\) gehört zur Vereinigung genau dann, wenn es in \emph{mindestens einer} der Mengen \(A_i\) enthalten ist.
 \[
-\bigcup_{i \in I} A_i := \{\, x \mid \exists i \in I : x \in A_i \,\}.
+\bigcup_{i \in I} A_i := \{\, x \mid \exists i \in I (x \in A_i)\}.
 \]
 
 
 \subsubsection{Allgemeiner Schnitt}
 \(x\) gehört zum Schnitt genau dann, wenn es in \emph{allen} Mengen \(A_i\) enthalten ist.
 \[
-\bigcap_{i \in I} A_i := \{\, x \mid \forall i \in I : x \in A_i \,\}.
+\bigcap_{i \in I} A_i := \{\, x \mid \forall i \in I (x \in A_i)\}.
 \]
 
 \subsection{Differenz}
