--- a/dm/cheatsheet.tex
+++ b/dm/cheatsheet.tex
@@ -3,7 +3,15 @@
 \usepackage{calc}
 \usepackage{ifthen}
 \usepackage[landscape, a4paper, top=3mm, left=3mm, right=3mm, bottom=3mm]{geometry}
-\usepackage{hyperref}
+\usepackage[
+     pdftex,
+     bookmarksopen=true,
+     pdfauthor={Justin Iven Müller},
+     pdftitle={Diskrete Mathematik Cheatsheet},
+     colorlinks=true,
+     linkcolor=blue,
+     urlcolor=blue
+]{hyperref}
 \usepackage{amsmath, amssymb}
 \usepackage{enumitem}
 \usepackage{tikz}
@@ -39,6 +47,7 @@
 \input{content/induction.tex}
 \input{content/structuralInductionAndRecursion.tex}
 \input{content/structuralInductionAndRecursionPropositionsExamples.tex}
+\input{content/elementaryNumberTheory.tex}
 
 \vfill
 
