--- a/dm/content/numberSets.tex
+++ b/dm/content/numberSets.tex
@@ -1,7 +1,7 @@
 \section{Zahlenmengen}
 \begin{tabular}{@{}ll@{}}
 \(\mathbb{N}\) & natürliche Zahlen \\
-\(\mathbb{N}_0\) & natürliche Zahlen mit 0 \\
+\(\mathbb{N}^+\) & natürliche Zahlen ohne 0 \\
 \(\mathbb{Z}\) & ganze Zahlen \\
 \(\mathbb{Q}\) & rationale Zahlen \\
 \(\mathbb{R}\) & reelle Zahlen \\
