--- a/dm/content/sets.tex
+++ b/dm/content/sets.tex
@@ -78,7 +78,7 @@ Die Differenz von zwei Mengen beinhaltet genau die Elemente, die in der ersten M
 A\setminus B:=\{x\in A\mid x\notin B\}.
 \]
 
-\subsection*{Disjunkte Mengen}
+\subsection{Disjunkte Mengen}
 Zwei Mengen \(A\) und \(B\) heissen disjunkt, wenn sie keine gemeinsamen Elemente besitzen.
 \[
 A \cap B = \varnothing.
