--- a/dm/cheatsheet.tex
+++ b/dm/cheatsheet.tex
@@ -48,6 +48,7 @@
 \input{content/structuralInductionAndRecursion.tex}
 \input{content/structuralInductionAndRecursionPropositionsExamples.tex}
 \input{content/elementaryNumberTheory.tex}
+\input{content/primeNumbers.tex}
 
 \vfill
 
