--- a/dm/cheatsheet.tex
+++ b/dm/cheatsheet.tex
@@ -49,6 +49,7 @@
 \input{content/structuralInductionAndRecursionPropositionsExamples.tex}
 \input{content/elementaryNumberTheory.tex}
 \input{content/primeNumbers.tex}
+\input{content/modularArithmetic.tex}
 
 \vfill
 
