--- a/an1/cheatsheet.tex
+++ b/an1/cheatsheet.tex
@@ -3,7 +3,15 @@
 \usepackage{calc}
 \usepackage{ifthen}
 \usepackage[landscape, a4paper, top=3mm, left=3mm, right=3mm, bottom=3mm]{geometry}
-\usepackage{hyperref}
+\usepackage[
+     pdftex,
+     bookmarksopen=true,
+     pdfauthor={Justin Iven Müller},
+     pdftitle={Analysis 1 Cheatsheet},
+     colorlinks=true,
+     linkcolor=blue,
+     urlcolor=blue
+]{hyperref}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{enumitem}
 \usepackage{tikz}
@@ -22,11 +30,13 @@
 % \input{content/temp.tex}
 \input{content/basics.tex}
 \input{content/functions.tex}
-\input{content/polynom.tex}
+\input{content/polynomialFunctions.tex}
+\input{content/rationalFunctions.tex}
 \input{content/derivatives.tex}
 \input{content/integrals.tex}
 \input{content/series.tex}
 \input{content/limits.tex}
+\input{content/curveSketching.tex}
 
 \vfill
 
