--- a/an1/content/basics.tex
+++ b/an1/content/basics.tex
@@ -11,13 +11,13 @@
 \subsection{Quadratische Gleichungen}
 Eine quadratische Gleichung hat die Form \(ax^2 + bx + c = 0\) mit \(a \neq 0\).
 
-\subsubsection*{Lösungsformel}
+\subsubsection{Lösungsformel}
 Die Lösungen sind gegeben durch:
 \[
 x_{1,2} = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}.
 \]
 
-\subsubsection*{Diskriminante}
+\subsubsection{Diskriminante}
 Die Diskriminante \(D = b^2 - 4ac\) entscheidet über die Art der Lösungen:
 \begin{itemize}
     \item \(D > 0\): zwei verschiedene reelle Lösungen
