--- a/an1/content/series.tex
+++ b/an1/content/series.tex
@@ -45,7 +45,6 @@ S_n =
 
 Durch Umstellen der obigen Formeln können auch die folgenden Grössen berechnet werden:
 \begin{align*}
-n &= \frac{\log\left(\frac{S_n(1-q)}{a_1} + q^n\right)}{\log(q)} + 1\\
-q &= \sqrt[n-1]{\frac{S_n(1-q)}{a_1} + q^n}\\
+n &= \frac{\ln \left( 1 - \frac{S_n (1 - q)}{a_1} \right)}{\ln(q)}\\
 a_1 &= S_n \frac{1-q}{1-q^n}
 \end{align*}
