--- a/an1/cheatsheet.tex
+++ b/an1/cheatsheet.tex
@@ -37,6 +37,7 @@
 \input{content/series.tex}
 \input{content/limits.tex}
 \input{content/curveSketching.tex}
+\input{content/optimizationProblems.tex}
 
 \vfill
 
