--- a/an1/content/series.tex
+++ b/an1/content/series.tex
@@ -24,7 +24,7 @@ S_n = n \left(2a_1 + \frac{n-1}{2}d\right)
 \]
 Durch Umstellen der obigen Formeln können auch die folgenden Grössen berechnet werden:
 \begin{align*}
-n &= \frac{\frac{d}{2}-a_1 \pm \sqrt{\left(a_1 - \frac{d}{2}\right)^2 + 2ds_n}}{d}\\
+n &= \frac{\frac{d}{2}-a_1 \pm \sqrt{\left(a_1 - \frac{d}{2}\right)^2 + 2dS_n}}{d}\\
 d &= \frac{2(S_n - n a_1)}{n(n-1)}\\
 a_1 &= \frac{S_n - \frac{n(n-1)}{2}d}{n}
 \end{align*}
@@ -45,6 +45,6 @@ S_n =
 
 Durch Umstellen der obigen Formeln können auch die folgenden Grössen berechnet werden:
 \begin{align*}
-n &= \frac{\ln \left( 1 - \frac{S_n (1 - q)}{a_1} \right)}{\ln(q)}\\
+n &= \log_q\left( 1 - \frac{S_n (1 - q)}{a_1} \right)\\
 a_1 &= S_n \frac{1-q}{1-q^n}
 \end{align*}
