--- a/dm/content/elementaryNumberTheory.tex
+++ b/dm/content/elementaryNumberTheory.tex
@@ -69,7 +69,7 @@ Durch Festlegung von \(\operatorname{ggT}(a,b) := \operatorname{ggT}(|a|,|b|)\) 
 
 \subsection{Lemma von Bézout}
 Für \(a,b \in \mathbb{Z}\), die nicht beide Null sind, existieren ganze Zahlen
-\(x,y\) mit
+\(s,t\) mit
 \[
 \operatorname{ggT}(a,b) = as + bt.
 \]
