--- a/dm/content/induction.tex
+++ b/dm/content/induction.tex
@@ -13,7 +13,7 @@ so folgt $\forall n\in(\mathbb{N}\ A(n))$.
   \item[Mengeninduktion] Für $A\subseteq\mathbb{N}$ gilt: Ist $0\in A$ und $\forall n\in\mathbb{N}(n\in A\Rightarrow n+1\in A)$, so ist $A=\mathbb{N}$.
   \item[Induktion mit Startwert] Für festen $z\in\mathbb{Z}$: Aus $A(z)$ und $\forall n\ge z\ (A(n)\Rightarrow A(n+1))$ folgt $\forall n\ge z\ A(n)$. Dies folgt durch Anwendung der normalen Induktion auf $B(n):=A(n+z)$.
   \item[Minimumsprinzip] Jede nichtleere Teilmenge $A\subseteq\mathbb{N}$ besitzt ein kleinstes Element. Dieses Prinzip ist äquivalent zum Induktionsprinzip.
-  \item[Kleinster Verbrecher] Beweis per Widerspruch: Existiert eine kleinste $n$ ohne Eigenschaft $A$, führt dies oft zu einem Widerspruch und damit zum Beweis von $\forall n\ A(n)$.
+  \item[Kleinster Verbrecher] Beweis per Widerspruch: Existiert ein kleinstes $n$ ohne Eigenschaft $A$, führt dies oft zu einem Widerspruch und damit zum Beweis von $\forall n\ A(n)$.
   \item[Starke Induktion] Gilt $\forall n\in\mathbb{N}\ \big(\forall m<n\ A(m)\Rightarrow A(n)\big)$, so folgt $\forall n\in\mathbb{N}\ A(n)$. Die starke Induktion ist logisch äquivalent zur gewöhnlichen Induktion.
   \item[Absteigende Ketten] Es existiert keine unendliche streng absteigende Folge $a_0>a_1>a_2>\dots$ in $\mathbb{N}$. Andernfalls würde die Menge $\{a_i\}$ kein Minimum besitzen, im Widerspruch zum Minimumsprinzip.
 \end{description}
