--- a/dm/content/infiniteSets.tex
+++ b/dm/content/infiniteSets.tex
@@ -3,7 +3,7 @@ Zwei Mengen \(A\) und \(B\) haben dieselbe Mächtigkeit (Kardinalität) \(|A|=|B
 
 \subsection{Wichtige Definitionen}
 \begin{itemize}
-  \item \(|A|=|B|\) : Existenz einer Bijektion \(f:A\to B\).
+  \item \(|A|=|B|\) : Existenz einer Bijektion \(f:A\leftrightarrow B\).
   \item \(|A|\le|B|\) : Es existiert eine injektive Abbildung \(g:A\hookrightarrow B\) (äquivalent: surjektive Abbildung \(B\twoheadrightarrow A\)).
   \item \(|A|=\infty\) : Abkürzung dafür, dass \(A\) nicht endlich ist.
   \item \(|\varnothing|\le|A|\) für alle Mengen \(A\).
