--- a/dm/content/posets.tex
+++ b/dm/content/posets.tex
@@ -104,6 +104,9 @@ Das heisst, es gibt keine \emph{unvergleichbaren} Paare mehr.
 \subsubsection{Satz von Marczewski--Szpilrajn}
 Jede Halbordnung \((A,\preceq)\) lässt sich zu einer linearen Ordnung \((A,\unlhd)\) erweitern, die die ursprüngliche Ordnung bewahrt und \emph{alle} Elemente vergleichbar macht.
 
+\subsection{Wohlordnung}
+Eine \emph{Wohlordnung} ist eine lineare Ordnung, in der jede nichtleere Teilmenge ein kleinstes Element besitzt. Endliche lineare Ordnungen sind stets Wohlordnungen.
+
 \subsection{Graphentheoretische Sicht}
 \begin{itemize}
   \item Eine endliche Halbordnung kann als gerichteter azyklischer Graph (DAG) dargestellt werden.
