--- a/dm/content/propositionalLogic.tex
+++ b/dm/content/propositionalLogic.tex
@@ -19,7 +19,7 @@ Aus gegebenen Prädikaten/Aussagen lassen sich durch Junktoren neue Aussagen bil
 \subsection{Wichtige Regeln}
 \begin{itemize}
   \item \textbf{De Morgan:}\\ 
-    \(\lnot(A\land B)\Leftrightarrow \lnot A\lor\lnot B\) 
+    \(\lnot(A\land B)\Leftrightarrow \lnot A\lor\lnot B\) \quad 
     \(\lnot(A\lor B)\Leftrightarrow\lnot A\land\lnot B\)
   \item \textbf{Distributivität:}
     \(A\land(B\lor C)\Leftrightarrow (A\land B)\lor(A\land C)\)
