--- a/an1/content/series.tex
+++ b/an1/content/series.tex
@@ -20,7 +20,7 @@ a_n = a_1 + (n-1)d
 $$
 Die Summe \(S_n\) der ersten \(n\) Glieder einer arithmetischen Reihe wird durch die folgende Formel gegeben:
 \[
-S_n = n \left(2a_1 + \frac{n-1}{2}d\right)
+S_n = \frac{n}{2} (a_1 + a_n) = \frac{n}{2} \left(2a_1 + (n-1)d\right)
 \]
 Durch Umstellen der obigen Formeln können auch die folgenden Grössen berechnet werden:
 \begin{align*}
