--- a/thin/cheatsheet.tex
+++ b/thin/cheatsheet.tex
@@ -7,7 +7,7 @@
      pdftex,
      bookmarksopen=true,
      pdfauthor={Justin Iven Müller},
-     pdftitle={Analysis 1 Cheatsheet},
+     pdftitle={Theoretische Informatik Cheatsheet},
      colorlinks=true,
      linkcolor=blue,
      urlcolor=blue
@@ -24,20 +24,10 @@
 \begin{multicols*}{4}
 
 \begin{center}
-     \Large{\textbf{Analysis 1}} \\
+     \Large{\textbf{Theoretische Informatik}} \\
 \end{center}
 
-% \input{content/temp.tex}
-\input{content/basics.tex}
-\input{content/functions.tex}
-\input{content/polynomialFunctions.tex}
-\input{content/rationalFunctions.tex}
-\input{content/derivatives.tex}
-\input{content/integrals.tex}
-\input{content/series.tex}
-\input{content/limits.tex}
-\input{content/curveSketching.tex}
-\input{content/optimizationProblems.tex}
+
 
 \vfill
 
