--- a/la/cheatsheet.tex
+++ b/la/cheatsheet.tex
@@ -27,14 +27,15 @@
      \Large{\textbf{Lineare Algebra}} \\
 \end{center}
 
-
+\input{content/matrixBasics.tex}
+\input{content/gaussElimination.tex}
 
 \vfill
 
 \rule{0.3\linewidth}{0.25pt}
 \scriptsize
 
-By Justin Iven Müller (2025)
+By Justin Iven Müller (2026)
 \href{https://github.com/JustinIven/zhaw-cheatsheets}{github.com/JustinIven/zhaw-cheatsheets}
 
 
