--- a/an1/content/optimizationProblems.tex
+++ b/an1/content/optimizationProblems.tex
@@ -1,6 +1,6 @@
 \section{Optimierungsprobleme}
 \begin{enumerate}
-    \item Problem analysieren und Zielgröße festlegen
+    \item Problem analysieren und Zielgrösse festlegen
     \item Variablen und Nebenbedingungen definieren
     \item Zielfunktion aufstellen und ggf. auf eine Variable reduzieren
     \item Ableitung berechnen und kritische Punkte bestimmen
